--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="btn">입력</button>
     </form>
     <div class="result"></div>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
